kubernates files added

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${project.parent.version}</version>
 				<configuration>
 					<excludes>
 						<exclude>
@@ -58,6 +59,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>spring-boot-k8s-crud</finalName>
 	</build>
 
 </project>
