--- a/db-deplyment.yml
+++ b/db-deplyment.yml
@@ -11,7 +11,7 @@ spec:
     - ReadWriteOnce   #This specifies the mode of the claim that we are trying to create.
   resources:
     requests:
-      storage: 100Mi    #This will tell kubernetes about the amount of space we are trying to claim.
+      storage: 1Gi    #This will tell kubernetes about the amount of space we are trying to claim.
 ---
 # Configure 'Deployment' of mysql server
 apiVersion: apps/v1
@@ -35,7 +35,8 @@ spec:
         tier: database
     spec:
       containers:
-        - image: mysql:8 # image from docker-hub
+        - image: mysql:5.7 # image from docker-hub
+          imagePullPolicy: "IfNotPresent"
           args:
             - "--ignore-db-dir=lost+found" # Workaround for https://github.com/docker-library/mysql/issues/186
           name: mysql
